# pqc-migration-analyzer

./: .gitignore  FINDINGS.md  HYPOTHESIS_REGISTRY.md  README.md  environment.yml  project.yaml  pyproject.toml  reproduce.sh
blog/: conference_abstract.md  draft.md  linkedin_post.md  substack_intro.md
docs/: ADVERSARIAL_EVALUATION.md  CLAUDE_MD.md  CONFIGURATION_SPEC.md  CONTENT_PLAN.md  DECISION_LOG.md  HYPOTHESIS_REGISTRY.md  IMPLEMENTATION_PLAYBOOK.md  PROJECT_BRIEF.md  PUBLICATION_PIPELINE.md  RISK_REGISTER.md  SCRIPT_ENTRYPOINTS_SPEC.md  TEST_ARCHITECTURE.md
outputs/: stdlib_scan.json
outputs/diagnostics/: learning_curves_seed1024.json  learning_curves_seed123.json  learning_curves_seed42.json  learning_curves_seed456.json  learning_curves_seed789.json  learning_curves_summary.json
outputs/provenance/: git_info.txt
outputs/scoring/: summary_seed123.json  summary_seed42.json  summary_seed456.json
scripts/: check_all_gates.sh  check_integrity.py  check_phase_0.sh  check_phase_1.sh  check_phase_2.sh  check_phase_3.sh  check_rubric.py  extract_crypto_cves.py  generate_figures.py  run_learning_curves.py  run_scoring.py  sweep.sh  verify_manifests.py
src/: cli.py
src/core/: crypto_primitives.py
src/detection/: regex_scanner.py
src/migration/: nist_mapping.py
tests/: test_basic.py
